2013-01-02  Carsten Haitzler (The Rasterman)

        * Fixed evas_software_xlib_x_write_mask_line() issue - it was
        finding a segment in the shm cache of the wrong size for masks!

2013-01-02  Cedric Bail

	* Use Eina_File for evas webp, gif, tiff and eet loader.
	* Add eet_map to open an Eet file from an Eina_File.

2012-12-31  Gustavo Sverzut Barbieri (k-s)

	* Fixed eina_xattr_value_ls() an eina_xattr_value_fd_ls()
	* Added eina_xattr_fd_get(), eina_xattr_fd_set(),
	eina_xattr_del(), eina_xattr_fd_del(), eina_xattr_copy() and
	eina_xattr_fd_copy()
	* Added eina_file_copy()

2012-12-24  Mike Blumenkrantz

        * eina_magic_fail() now throws error messages on NULL pointers instead of critical
        * all efl object-freeing functions now take NULL without crashing or erroring
        * eio functions no longer crash when passed NULL and throw errors accordingly

2012-12-19  Gustavo Sverzut Barbieri (k-s)

	* Fixed Evas RGBA_Image->flags.loaded for copied images.
	* Fixed evas_object_image_is_inside() implementation.

2012-12-19  Carsten Haitzler (The Rasterman)

        * Fixed 24bpp issue with rendering in evas. It shows itself
        only under qemu/kvm with the cirruse driver that I have found.
        In this case the screen is really 24bpp packed and this case
        just never comes up on any vaguely modern gfx system.
        * Fixed 24bpp ximage convert back from 24bpp to 32bpp in
        ecore-x. Only shows itself in qemu/kvm.

2012-12-18  Gustavo Sverzut Barbieri (k-s)

	* Fixed many memory problems with ecore_evas_extn

2012-12-18  Leandro Pereira

	* Add threaded renderer.
	* Modify software_generic and gl_x11 to use threaded renderer.

2012-12-17  Daniel Willmann
	* Add EFL Audio API - ecore_audio

2012-12-17  Leandro Pereira

	* Get rid of unused `ref` field in RGBA_Image struct.
	* Prepare soil to land threaded render.
		* Use refcounted glyph arrays.
		* Common code to draw lines, polygons, rectangles, maps,
		and scaling.
