@@ -204,6 +204,7 @@ Mikael SANS <sans.mikael@gmail.com>
 Mike Blumenkrantz (zmike/discomfitor) <michael.blumenkrantz@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
 Daniel Willmann <d.willmann@samsung.com>
+Jérémy Zurcher <jeremy@asynk.ch>
 
 
 EDBus
