@@ -1,3 +1,7 @@
+2013-01-03  Jérémy Zurcher
+
+	* Add eio_eet_sync symbols.
+
 2013-01-02  Carsten Haitzler (The Rasterman)
 
         * Fixed evas_software_xlib_x_write_mask_line() issue - it was
